# lolitop

./: Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 7875b8x9iwpmyx0ny8vmy62zb1c2bbvz-source
src/: camera.rs  cpu.rs  lib.rs  main.rs  metrics.rs  model.rs  shader.wgsl  state.rs  text.rs  ui.rs  window.rs
