[package]
name = "lolitop"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1.0"
winit = { version = "0.30.5" }
wayland-cursor = "0.31.6"
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.3"
bytemuck = { version = "1.18.0", features = ["derive"] }
cgmath = "0.18"
anyhow = "1.0.89"
glyphon = "0.6.0"
