[package]
name = "lolitop"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "23.0.1"
winit = { version = "0.30.5" }
wayland-cursor = "0.31.7"
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.4.0"
bytemuck = { version = "1.20.0", features = ["derive"] }
cgmath = "0.18"
anyhow = "1.0.94"
glyphon = "0.7.0"
egui-wgpu = { version = "0.30.0", features = ["winit"] }
egui = "0.30.0"
egui-winit = "0.30.0"
